# holiday-name-swap

./: conftest.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: namedraw.py
src/name_swap/: __init__.py  __main__.py  models.py
tests/: test_giver.py  test_matchmaking.py  test_player.py
