[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core>=3.3,<4"]

[project]
name = "holiday-name-swap"
version = "0.1.0"
description = "Swaps names for holiday gift exchanges"
authors = [{name = "klove"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic>=2.10",
    "flit>=3.3,<4",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.flit.module]
name = "name_swap"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
